samples/_failures_safe/1761307431_a5a3f1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3e0fed31.c: In function ‘handle_event’:
./samples/SAFE/__tmp_3e0fed31.c:148:5: error: expected expression at end of input
  148 |     if (sm == NULL || tt == NULL || event >= EVENT_COUNT)
      |     ^~
./samples/SAFE/__tmp_3e0fed31.c:148:5: error: expected declaration or statement at end of input
